# porther

./: Cargo.toml  README.md  foo.porth  rustfmt.toml
examples/: fizzbuzz.porth  rule110.porth
examples/euler/: even-fibonacci-numbers.porth  largest-palindrome-product.porth  largest-prime-factor.porth
src/: main.rs
src/porth/: mod.rs  test.rs
std/: mem.porth  std.porth
tests/: 01-stack-manipulation.porth  02-comparison.porth  03-arithmetic.porth  04-bitwise.porth  05-control-flow.porth  06-loops.porth  07-memory.porth  08-open.porth  09-proc.porth  10-let.porth
